# boids2

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
shader/: fragment.frag  vertex.vert
src/: boid.h  boidManager.h  glad.c  main.cpp  shader.h  util.h
